--- a/public/components/header/header.css
+++ b/public/components/header/header.css
@@ -109,3 +109,10 @@ header select.current{
     z-index: 10;
     opacity: 1;
 }
+
+
+@media only screen and (max-width: 1600px) {
+    :root{
+        font-size: 14px;
+    }
+}
