--- a/public/index.css
+++ b/public/index.css
@@ -11,15 +11,20 @@
     --dark-grey: #484848;
     --darkest-grey: #1D1D1D;
     --light-grey: #8E8E8E;
+    --lightest-grey: #CCCCCC;
     --white: #fff;
 
     --lilac: #D2AFFF;
     --light-lilac: #F0E5FD;
     --dark-purple: #9745FF;
+    --main-purple-color-darker:#ba87fe;
 
 
     --header-height: 3.7rem;
     --header-margin-top:2rem;
+    --header-container-height: calc(var(--header-height) + var(--header-margin-top) * 2);
+    
+    font-size: 16px;
 }
 
 *{
@@ -45,13 +50,26 @@ button, select {
     font-weight: bold;
 }
 
+main{
+    display: flex;
+    width: 500vw;
+
+    transition: transform 400ms linear;
+}
+
+section{
+    position: relative;
+    min-width: 100vw;
+}
+
 section .diagram-container{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: calc(100vh - var(--header-container-height));
 }
 
-#wrapper{
+#wrapper:has(#home-page){
     height: 100vh;
 }
 
