--- a/public/pages/mainPage/decades/decades.css
+++ b/public/pages/mainPage/decades/decades.css
@@ -1,6 +1,11 @@
+#decades-page .diagram-container{
+    margin: auto;
+    aspect-ratio: 1 / 1;
+}
+
 #decades-page .decadeText{
     fill:var(--light-grey);
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-family: sans-serif;
     font-weight: 100;
 }
@@ -22,41 +27,72 @@
 }
 
 #decades-page .song{
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-    column-gap: 1.25rem;
-    row-gap: 0.5rem;
     position: absolute;
-    bottom: 2rem;
-    left:2rem;
-    color: var(--white);
     opacity: 0;
+    z-index: -1;
+
+    left:10%;
+    top:20%;
+
+    width: 16.5rem;
+    height: 16.5rem;
+    border-radius: 2.5rem;
+    background-size: cover;
 
     transition: 200ms all ease-in-out;
 }
 
-#decades-page .song.show{
-    opacity: 1;
-    z-index: 10;
+#decades-page .song .decade-title-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 9rem;
+    height: 9rem;
+    border-radius: 50%;
+    background-color: var(--darkest-grey);
+    bottom: -3.5rem;
+    left: -3.5rem;
+    position: absolute;
+    color: var(--lightest-grey);
 }
 
-#decades-page .song .decadeTitle{
-    grid-row: 1;
-    grid-column: 1;
+#decades-page .song h3{
+    text-align: center;
+    font-size: 1rem;
 }
 
-#decades-page .song img{
-    width: 7rem;
-    grid-row: 2;
-    grid-column: 1;
-}
+#decades-page .song .song-info-container{
+    position: absolute;
+    bottom: -6rem;
+    left:4rem;
 
-#decades-page .song .artistInfo{
-    grid-row: 2;
-    grid-column: 2;
+    min-height: 6.2rem;
+    width: 70%;
 
     display: flex;
     flex-direction: column;
-    gap:0.5rem;
+    justify-content: center;
+    align-items: center;
+    gap:0.3rem;
+   
+    background-color: var(--dark-grey);
+    padding: 1.5rem 1rem;
+    border-radius: 2rem;
+}
+
+#decades-page .song .artist-name{
+    color: var(--lightest-grey);
+    font-weight: normal;
+}
+
+#decades-page .song .song-name{
+    font-style: italic;
+    font-weight: normal;
+    color: white;
+}
+
+#decades-page .song.show{
+    opacity: 1;
+    z-index: 1;
 }
