Set the circle from decadePage to middle

--- a/public/pages/mainPage/decadesPage/decadesPage.css
+++ b/public/pages/mainPage/decadesPage/decadesPage.css
@@ -30,9 +30,9 @@
     position: absolute;
     opacity: 0;
     z-index: -1;
+    transform: translate(0, -35%);
 
-    left:10rem;
-    top:20%;
+    top:35%;
 
     width: 16.5rem;
     height: 16.5rem;
