edited font-size to make it more suitable

--- a/public/pages/mainPage/decadesPage/decadesPage.css
+++ b/public/pages/mainPage/decadesPage/decadesPage.css
@@ -5,7 +5,7 @@
 
 #decades-page .decadeText{
     fill:var(--light-grey);
-    font-size: 0.9rem;
+    font-size: 0.9em;
     font-family: sans-serif;
     font-weight: 100;
 }
