--- a/public/index.css
+++ b/public/index.css
@@ -4,13 +4,13 @@
     --main-purple-color: #BB87FE;
     
     --dark-main-green-color:#0f682e;
-    --menu-black-color: #000000;
+    --menu-black-color: #020202;
     --green-bubble-color: #1ED7604D;
     --purple-bubble-dark-color:#8526FF4D;
     --purple-bubble-color: #A056FF4D;
 
-    --dark-grey: #484848;
-    --darkest-grey: #1D1D1D;
+    --dark-grey: #453d52;
+    --darkest-grey: #27222e;
     --light-grey: #8E8E8E;
     --lightest-grey: #CCCCCC;
     --white: #fff;
@@ -43,7 +43,7 @@ body::before{
     content: "";
     position: fixed;
     inset: 0;
-    background: linear-gradient(130deg,rgb(6, 4, 7) 10%, rgb(29, 20, 48) 100%);
+    background: linear-gradient(130deg,rgb(14, 10, 15) 10%, rgb(37, 23, 65) 100%);
     z-index: -1;
 
     /* transition: 300ms all ease-in-out; */
@@ -89,9 +89,18 @@ section .diagram-container{
     justify-content: center;
     align-items: center;
     height: calc(100vh - var(--header-container-height));
-    
-
 }
+
+#side-buttons{
+    position: absolute;
+    top:50%;
+    right: 2%;
+    display: flex;
+    flex-direction: column;
+    transform: translate(0, -50%);
+    gap:1rem;
+}
+
 
 #wrapper:has(#home-page){
     height: 100vh;
