summary page is now completed

--- a/public/index.css
+++ b/public/index.css
@@ -91,6 +91,11 @@ section .diagram-container{
     height: calc(100vh - var(--header-container-height));
 }
 
+section#summary-page{
+    position: absolute;
+    top:-100vh;
+}
+
 #side-buttons{
     position: absolute;
     top:50%;
