--- a/public/components/header/header.css
+++ b/public/components/header/header.css
@@ -10,6 +10,8 @@ header{
     
     padding: 0 4rem;
     margin:var(--header-margin-top) 0; 
+    position: relative;
+    z-index: 10;
 }
 
 header nav{
@@ -201,21 +203,7 @@ header select{
     font-size: 1em;
     text-align: center;
     position: absolute;
-    opacity: 0;
     color: black;
-
-    transition: 300ms all ease-in-out;
-}
-
-header select.disabled{
-    background-color: var(--dark-main-green-color);
-    cursor:default;
-    color: black;
-}
-
-header select.current{
-    z-index: 10;
-    opacity: 1;
 }
 
 
